--- a/.gitlab-ci/.lint.yml
+++ b/.gitlab-ci/.lint.yml
@@ -6,13 +6,13 @@ lint_job:
     - echo "Install packages for a folder 'server'..."
     - npm install
     - echo "Checking files from a folder 'server'..."
-    - npm run lint --output-file=lint-results-server.txt --format=pretty
+    - npm run lint --output-file=lint-results-server.txt --format pretty
     - cd ..
     - cd client
     - echo "Install packages for a folder 'client'..."
     - npm install
     - echo "Checking files from a folder 'client'..."
-    - npm run lint --output-file=lint-results-client.txt --format=pretty
+    - npm run lint --output-file=lint-results-client.txt --format pretty
     - cd ..
     - echo "All files have been verified!"
   artifacts:
