--- a/.gitlab-ci/.lint.yml
+++ b/.gitlab-ci/.lint.yml
@@ -1,22 +1,18 @@
 lint_job:
   stage: lint
-  image: node:20-slim
+  image: node:latest
   script:
     - cd server
     - echo "Install packages for a folder 'server'..."
     - npm install
     - echo "Checking files from a folder 'server'..."
-    - npm run lint > lint-results-server.txt
+    - npm run lint
     - cd ..
+    - ls -l
     - cd client
     - echo "Install packages for a folder 'client'..."
     - npm install
     - echo "Checking files from a folder 'client'..."
-    - npm run lint > lint-results-client.txt
+    - npm run lint
     - cd ..
     - echo "All files have been verified!"
-  artifacts:
-    paths:
-      - lint-results-server.txt
-      - lint-results-client.txt
-    expire_in: 3 day
