--- a/.gitlab-ci/.lint copy.yml
+++ b/.gitlab-ci/.lint copy.yml
@@ -2,18 +2,16 @@ lint_job:
   stage: lint
   image: node:20-slim
   script:
-    - chmod +x lint.sh
     - cd server
     - echo "Install packages for a folder 'server'..."
     - npm install
-    - ./lint.sh server
+    - echo "Checking files from a folder 'server'..."
+    - npm run lint
     - cd ..
     - cd client
     - echo "Install packages for a folder 'client'..."
     - npm install
-    - ./lint.sh client
+    - echo "Checking files from a folder 'client'..."
+    - npm run lint
     - cd ..
     - echo "All files have been verified!"
-  artifacts:
-    paths:
-      - lint_output.txt
