--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,10 @@
 include:
   - local: ".gitlab-ci/.lint.yml"
+  - local: ".gitlab-ci/.build.yml"
+
+variables:
+  APP_VERSION: "v0.$CI_PIPELINE_IID"
 
 stages:
   - lint
+  - build
