--- a/.gitlab-ci/.build.yml
+++ b/.gitlab-ci/.build.yml
@@ -4,5 +4,6 @@ build_job:
     - apk add git
     - git tag $APP_VERSION
   script:
+    - echo "Current commit tag: $CI_COMMIT_TAG"
     - echo "Login into Gitlab Registry..."
     - docker login -u $CI_DEPLOY_USER -p $CI_DEPLOY_PASSWORD $CI_REGISTRY
