--- a/.gitlab-ci/.build.yml
+++ b/.gitlab-ci/.build.yml
@@ -2,6 +2,8 @@ build_job:
   stage: build
   before_script:
     - apk add git
+    - git config --global user.email "$GITLAB_USER_EMAIL"
+    - git config --global user.name "$GITLAB_USER_NAME"
     - git tag "$APP_VERSION"
     - git push origin "$APP_VERSION"
   script:
