--- a/.gitlab-ci/.build.yml
+++ b/.gitlab-ci/.build.yml
@@ -4,11 +4,16 @@ build_job:
     - echo "Login to Gitlab Registry..."
     - docker login -u $CI_DEPLOY_USER -p $CI_DEPLOY_PASSWORD $CI_REGISTRY
     - echo "Building docker images..."
-    - docker build -t $CI_REGISTRY_IMAGE-client:$APP_VERSION ./client
-    - docker build -t $CI_REGISTRY_IMAGE-nginx:$APP_VERSION ./nginx
-    - docker build -t $CI_REGISTRY_IMAGE-server:$APP_VERSION ./server
+    - echo "Building image $CI_REGISTRY_IMAGE-server:$APP_VERSION"
+    - docker buildx build -t $CI_REGISTRY_IMAGE-server:$APP_VERSION --cache-from $CI_REGISTRY_IMAGE-server:latest ./server
+    - echo "Building image $CI_REGISTRY_IMAGE-client:$APP_VERSION"
+    - docker buildx build -t $CI_REGISTRY_IMAGE-client:$APP_VERSION --cache-from $CI_REGISTRY_IMAGE-client:latest ./client
+    - echo "Building image $CI_REGISTRY_IMAGE-ninx:$APP_VERSION"
+    - docker buildx build -t $CI_REGISTRY_IMAGE-nginx:$APP_VERSION --cache-from $CI_REGISTRY_IMAGE-nginx:latest ./nginx
+    - echo "All the images have been built:"
+    - docker images
     - echo "Sending image to Gitlab Registry..."
+    - docker push $CI_REGISTRY_IMAGE-server:$APP_VERSION
     - docker push $CI_REGISTRY_IMAGE-client:$APP_VERSION
     - docker push $CI_REGISTRY_IMAGE-nginx:$APP_VERSION
-    - docker push $CI_REGISTRY_IMAGE-server:$APP_VERSION
-    - echo "Build complete!"
+    - echo "All images have been sent to Gitlab Registry!"
