--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,7 +3,7 @@ FROM node:20.17.0-slim AS builder
 WORKDIR /app
 
 COPY ./package.json ./
-RUN npm i
+RUN npm install --legacy-peer-deps
 
 COPY . .
 RUN npm run build
