check build stage

--- a/.gitlab-ci/.build.yml
+++ b/.gitlab-ci/.build.yml
@@ -17,4 +17,4 @@ build_job:
     - docker push $CI_REGISTRY_IMAGE-server:$APP_VERSION ./server
     - docker push $CI_REGISTRY_IMAGE-nginx:$APP_VERSION ./nginx
     - docker push $CI_REGISTRY_IMAGE-client:$APP_VERSION ./client
-    - echo "All images have been sent to Gitlab Registry"
+    - echo "All images have been sent to Gitlab Registry!"
