--- a/.gitlab-ci/.build.yml
+++ b/.gitlab-ci/.build.yml
@@ -2,7 +2,7 @@ build_job:
   stage: build
   script:
     - echo "Login to Gitlab Registry..."
-    - docker login -u $CI_DEPLOY_USER -p $CI_DEPLOY_PASSWORD $CI_REGISTRY
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - echo "Building docker images..."
     - echo "Building image $CI_REGISTRY_IMAGE-server:$APP_VERSION"
     - docker buildx build -t $CI_REGISTRY_IMAGE-server:$APP_VERSION --cache-from $CI_REGISTRY_IMAGE-server:latest ./server
@@ -11,8 +11,7 @@ build_job:
     - docker buildx build -t $CI_REGISTRY_IMAGE-nginx:$APP_VERSION --cache-from $CI_REGISTRY_IMAGE-nginx:latest ./nginx
     - echo "Building image $CI_REGISTRY_IMAGE-client:$APP_VERSION"
     - docker buildx build -t $CI_REGISTRY_IMAGE-client:$APP_VERSION --cache-from $CI_REGISTRY_IMAGE-client:latest ./client
-    - echo "All the images have been built:"
-    - docker images
+    - echo "All the images have been built!"
     - echo "Sending image to Gitlab Registry..."
     - docker push $CI_REGISTRY_IMAGE-server:$APP_VERSION
     - docker push $CI_REGISTRY_IMAGE-nginx:$APP_VERSION
