--- a/.gitlab-ci/.build.yml
+++ b/.gitlab-ci/.build.yml
@@ -6,8 +6,7 @@ build_job:
     - echo "Building docker images..."
     - echo "Building image $CI_REGISTRY_IMAGE-server:$APP_VERSION"
     - docker buildx build -t $CI_REGISTRY_IMAGE-server:$APP_VERSION --cache-from $CI_REGISTRY_IMAGE-server:latest ./server
-    - ls -l
-    - echo "Building image $CI_REGISTRY_IMAGE-ninx:$APP_VERSION"
+    - echo "Building image $CI_REGISTRY_IMAGE-nginx:$APP_VERSION"
     - docker buildx build -t $CI_REGISTRY_IMAGE-nginx:$APP_VERSION --cache-from $CI_REGISTRY_IMAGE-nginx:latest ./nginx
     - echo "Building image $CI_REGISTRY_IMAGE-client:$APP_VERSION"
     - docker buildx build -t $CI_REGISTRY_IMAGE-client:$APP_VERSION --cache-from $CI_REGISTRY_IMAGE-client:latest ./client
