--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,12 @@
 include:
   - local: ".gitlab-ci/.lint.yml"
   - local: ".gitlab-ci/.build.yml"
+  - local: ".gitlab-ci/.deploy.yml"
 
 variables:
-  APP_VERSION: "v0.$CI_PIPELINE_IID"
-  IMAGE_TAG: "0.$CI_PIPELINE_IID"
+  APP_VERSION: "v0.0.$CI_PIPELINE_IID"
 
 stages:
   - lint
   - build
+  - deploy
