--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:20.17.0-slim AS builder
 
-WORKDIR /app/client
+WORKDIR /app
 
 COPY ./package.json ./
 RUN npm install --legacy-peer-deps
@@ -10,7 +10,5 @@ RUN npm run build
 
 FROM nginx:stable-alpine
 
-EXPOSE 5173
-
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/client/dist /usr/share/nginx/html
+COPY --from=builder /app/dist /usr/share/nginx/html
