check deploy file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,11 @@ include:
 
 variables:
   APP_VERSION: "v0.0.$CI_PIPELINE_IID"
+  MONGODB_USER: "$MONGODB_USER"
+  MONGODB_PASSWORD: "$MONGODB_PASSWORD"
+  MONGODB_DATABASE: "$MONGODB_DATABASE"
+  MONGODB_LOCAL_PORT: "$MONGODB_DOCKER_PORT"
+  MONGODB_DOCKER_HOST: "$MONGODB_DOCKER_HOST"
 
 stages:
   - lint
