--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,17 @@
 FROM node:20.17.0-slim
 
+ARG MONGODB_USER
+ARG MONGODB_PASSWORD
+ARG MONGODB_HOST
+ARG MONGODB_PORT
+ARG MONGODB_DATABASE
+
+ENV MONGODB_USER=${MONGODB_USER}
+ENV MONGODB_PASSWORD=${MONGODB_PASSWORD}
+ENV MONGODB_HOST=${MONGODB_HOST}
+ENV MONGODB_PORT=${MONGODB_PORT}
+ENV MONGODB_DATABASE=${MONGODB_DATABASE}
+
 WORKDIR /app
 
 COPY ./package.json ./
