check deploy file

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -12,6 +12,8 @@ ENV MONGODB_HOST=${MONGODB_HOST}
 ENV MONGODB_PORT=${MONGODB_PORT}
 ENV MONGODB_DATABASE=${MONGODB_DATABASE}
 
+RUN echo $MONGODB_USER
+
 WORKDIR /app
 
 COPY ./package.json ./
