--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,17 +2,15 @@ FROM node:20.17.0-slim
 
 ARG MONGODB_USER
 ARG MONGODB_PASSWORD
-ARG MONGODB_HOST
-ARG MONGODB_PORT
+ARG MONGODB_DOCKER_HOST
+ARG MONGODB_LOCAL_PORT
 ARG MONGODB_DATABASE
 
 ENV MONGODB_USER=${MONGODB_USER}
 ENV MONGODB_PASSWORD=${MONGODB_PASSWORD}
-ENV MONGODB_HOST=${MONGODB_HOST}
-ENV MONGODB_PORT=${MONGODB_PORT}
+ENV MONGODB_DOCKER_HOST=${MONGODB_DOCKER_HOST}
+ENV MONGODB_LOCAL_PORT=${MONGODB_LOCAL_PORT}
 ENV MONGODB_DATABASE=${MONGODB_DATABASE}
-
-RUN echo $MONGODB_USER
 
 WORKDIR /app
 
