--- a/.gitlab-ci/.build.yml
+++ b/.gitlab-ci/.build.yml
@@ -9,7 +9,7 @@ build_job:
       docker buildx build --build-arg MONGODB_USER=$MONGODB_USER \
         --build-arg MONGODB_PASSWORD=$MONGODB_PASSWORD \
         --build-arg MONGODB_DOCKER_HOST=$MONGODB_DOCKER_HOST \
-        --build-arg MONGODB_LOCAL_PORT=$MONGODB_LOCAL_PORT \
+        --build-arg MONGODB_DOCKER_PORT=$MONGODB_DOCKER_PORT \
         --build-arg MONGODB_DATABASE=$MONGODB_DATABASE \
         -t $CI_REGISTRY_IMAGE/server:$APP_VERSION \
         --cache-from $CI_REGISTRY_IMAGE/server:latest ./server
