--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -16,10 +16,8 @@ RUN mkdir app
 WORKDIR /app
 
 COPY package.json package-lock.json ./
-RUN npm install --production
+RUN npm install --legacy-peer-deps
 
 COPY . .
-
-EXPOSE 3000
 
 CMD ["npm", "run", "start"]
