--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -12,11 +12,11 @@ ENV MONGODB_DOCKER_HOST=${MONGODB_DOCKER_HOST}
 ENV MONGODB_DOCKER_PORT=${MONGODB_DOCKER_PORT}
 ENV MONGODB_DATABASE=${MONGODB_DATABASE}
 
-WORKDIR /usr/src/app
+WORKDIR /app
 
 COPY package.json ./
 RUN npm install 
 
 COPY . .
 
-CMD ["npm", "run", "start"]
+CMD ls -l
