--- a/.gitlab-ci/.build.yml
+++ b/.gitlab-ci/.build.yml
@@ -5,22 +5,11 @@ build_job:
     - docker login -u $CI_REGISTRY_USER -p $MY_PROJECT_TOKEN $CI_REGISTRY
     - echo "Building docker images..."
     - echo "Building image $CI_REGISTRY_IMAGE/server:$APP_VERSION"
-    - >
-      docker buildx build --build-arg MONGODB_USER=$MONGODB_USER \
-        --build-arg MONGODB_PASSWORD=$MONGODB_PASSWORD \
-        --build-arg MONGODB_DOCKER_HOST=$MONGODB_DOCKER_HOST \
-        --build-arg MONGODB_DOCKER_PORT=$MONGODB_DOCKER_PORT \
-        --build-arg MONGODB_DATABASE=$MONGODB_DATABASE \
-        -t $CI_REGISTRY_IMAGE/server:$APP_VERSION \
-        --cache-from $CI_REGISTRY_IMAGE/server:latest ./server
+    - docker build -t $CI_REGISTRY_IMAGE/server:$APP_VERSION  ./server
     - echo "Building image $CI_REGISTRY_IMAGE/nginx:$APP_VERSION"
-    - >
-      docker buildx build -t $CI_REGISTRY_IMAGE/nginx:$APP_VERSION \
-        --cache-from $CI_REGISTRY_IMAGE/nginx:latest ./nginx
+    - docker build -t $CI_REGISTRY_IMAGE/nginx:$APP_VERSION ./nginx
     - echo "Building image $CI_REGISTRY_IMAGE/client:$APP_VERSION"
-    - >
-      docker buildx build -t $CI_REGISTRY_IMAGE/client:$APP_VERSION \
-        --cache-from $CI_REGISTRY_IMAGE/client:latest ./client
+    - docker build -t $CI_REGISTRY_IMAGE/client:$APP_VERSION ./client
     - echo "All the images have been built!"
     - echo "Sending image to Gitlab Registry..."
     - docker push $CI_REGISTRY_IMAGE/server:$APP_VERSION
