--- a/.gitlab-ci/.deploy.yml
+++ b/.gitlab-ci/.deploy.yml
@@ -17,6 +17,6 @@ deploy_job:
     - echo "Pulling latest images for application..."
     - docker compose pull
     - echo "Container startup..."
-    - docker compose up -d --force-recreate
+    - docker compose up -d --build --force-recreate
     - echo "Application successfully deployed!"
   environment: production
