--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
     ports:
       - "127.0.0.1:3000:3000"
     volumes:
+      - /app/node_modules
       - ./server:/app
     networks:
       - web_network
@@ -60,6 +61,7 @@ services:
       dockerfile: Dockerfile
       context: ./client
     volumes:
+      - /app/node_modules
       - ./client:/app
     networks:
       - web_network
