--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,17 +1,5 @@
 FROM node:20.17.0-slim
 
-ARG MONGODB_USER
-ARG MONGODB_PASSWORD
-ARG MONGODB_DOCKER_HOST
-ARG MONGODB_DOCKER_PORT
-ARG MONGODB_DATABASE
-
-ENV MONGODB_USER=${MONGODB_USER}
-ENV MONGODB_PASSWORD=${MONGODB_PASSWORD}
-ENV MONGODB_DOCKER_HOST=${MONGODB_DOCKER_HOST}
-ENV MONGODB_DOCKER_PORT=${MONGODB_DOCKER_PORT}
-ENV MONGODB_DATABASE=${MONGODB_DATABASE}
-
 WORKDIR /app
 
 COPY package.json ./
@@ -19,4 +7,4 @@ RUN npm install
 
 COPY . .
 
-CMD ls -l && pwd
+CMD ["npm", "run", "start"]
