--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,8 +3,8 @@ FROM node:20.17.0-slim
 WORKDIR /app
 
 COPY package.json ./
-RUN npm install 
+RUN npm install --production
 
 COPY . .
 
-CMD ["npm", "run", "start"]
+CMD ["node", "index.ts"]
