check deploy file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,11 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=${MONGODB_PASSWORD}
     ports:
       - ${MONGODB_LOCAL_PORT}:${MONGODB_DOCKER_PORT}
+    healthcheck:
+      test: ["CMD", "pg_isready"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     volumes:
       - mongodb_data_container:/data/db
     networks:
@@ -32,7 +37,8 @@ services:
     image: ${CI_REGISTRY_IMAGE}/server:${APP_VERSION}
     container_name: movies-app-server
     depends_on:
-      - mongodb
+      mongodb:
+        condition: service_healthy
     restart: on-failure
     build:
       dockerfile: Dockerfile
