--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,10 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "nodemon index.ts",
-    "lint": "eslint ."
+    "start": "NODE_PATH=./dist node dist/index.js",
+    "build": "tsc -p .",
+    "dev": "nodemon src/index.ts",
+    "lint": "eslint ./src"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
