--- a/server/.dockerignore
+++ b/server/.dockerignore
@@ -1,8 +1,8 @@
 **/node_modules/
-**/dist
-.git
-npm-debug.log
-.coverage
-.coverage.*
-.env
-.aws
+**/.git
+**/README.md
+**/LICENSE
+**/.vscode
+**/npm-debug.log
+**/coverage
+**/.env
