--- a/.gitlab-ci/.deploy.yml
+++ b/.gitlab-ci/.deploy.yml
@@ -1,5 +1,7 @@
 deploy_job:
   stage: deploy
+  needs:
+    - job: build_job
   script:
     - echo "Login to Gitlab Registry..."
     - docker login -u $CI_REGISTRY_USER -p $MY_PROJECT_TOKEN $CI_REGISTRY
@@ -19,4 +21,6 @@ deploy_job:
     - echo "Container startup..."
     - docker compose up -d --force-recreate
     - echo "Application successfully deployed!"
+  only:
+    - master
   environment: production
