--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ include:
   - local: ".gitlab-ci/.lint.yml"
   - local: ".gitlab-ci/.build.yml"
   - local: ".gitlab-ci/.deploy.yml"
+  - local: ".gitlab-ci/.notify.yml"
 
 variables:
   APP_VERSION: "v0.0.$CI_PIPELINE_IID"
@@ -10,3 +11,4 @@ stages:
   - lint
   - build
   - deploy
+  - notify
