--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,12 @@ include:
   - local: ".gitlab-ci/.build.yml"
   - local: ".gitlab-ci/.deploy.yml"
   - local: ".gitlab-ci/.notify.yml"
+  - local: ".gitlab-ci/.rollback.yml"
+
+.docker-login:
+  before_script:
+    - echo "Login to Gitlab Registry..."
+    - docker login -u $CI_REGISTRY_USER -p $MY_PROJECT_TOKEN $CI_REGISTRY
 
 variables:
   APP_VERSION: "v0.0.$CI_PIPELINE_IID"
@@ -12,3 +18,4 @@ stages:
   - build
   - deploy
   - notify
+  - rollback
