--- a/.gitlab-ci/.notify.yml
+++ b/.gitlab-ci/.notify.yml
@@ -4,7 +4,7 @@
   needs:
     - job: deploy_job
   before_script:
-    - chmod +x ./.gitlab-ci/notify.sh
+    - chmod +x ./notify.sh
     - echo "Notification sending..."
   only:
     - master
@@ -28,5 +28,5 @@ notify_error_job:
 notify_success_job:
   extends: .notify
   script:
-    - ./.gitlab-ci/notify.sh $MESSAGE_SUCCESS
+    - ./notify.sh $MESSAGE_SUCCESS
   when: on_success
