--- a/.gitlab-ci/.notify.yml
+++ b/.gitlab-ci/.notify.yml
@@ -1,9 +1,10 @@
 .notify:
   stage: notify
-  image: curlimages/curl
   needs:
     - job: deploy_job
   before_script:
+    - apk add curl
+    - chmod +x notify.sh
     - echo "Notification sending..."
   only:
     - master
@@ -27,6 +28,5 @@ notify_error_job:
 notify_success_job:
   extends: .notify
   script:
-    - chmod +x notify.sh
     - notify.sh $MESSAGE_SUCCESS
   when: on_success
