--- a/.gitlab-ci/.notify.yml
+++ b/.gitlab-ci/.notify.yml
@@ -28,5 +28,6 @@ notify_error_job:
 notify_success_job:
   extends: .notify
   script:
-    - ../notify.sh $MESSAGE_SUCCESS
+    - pwd
+    - ./notify.sh $MESSAGE_SUCCESS
   when: on_success
