--- a/.gitlab-ci/.notify.yml
+++ b/.gitlab-ci/.notify.yml
@@ -1,3 +1,8 @@
+variables:
+  MESSAGE: ""
+  MESSAGE_SUCCESS: "*Deployment for $CI_PROJECT_NAME Successfull* 👌 \\n\\n*New App Version* _ $APP_VERSION _ \\n\\n[Open Website](http://127.0.0.1:3050/)"
+  MESSAGE_FAILURE: "*Deployment for $CI_PROJECT_NAME Failed* ❌ \\n\\n*Please check the error* \\n\\n[Open Pipeline]($CI_PIPELINE_URL)"
+
 .notify:
   stage: notify
   image: curlimages/curl
@@ -16,11 +21,6 @@
   only:
     - master
 
-variables:
-  MESSAGE: ""
-  MESSAGE_SUCCESS: "*Deployment for $CI_PROJECT_NAME Successfull* 👌 \\n\\n*New App Version* _ $APP_VERSION _ \\n\\n[Open Website](http://127.0.0.1:3050/)"
-  MESSAGE_FAILURE: "*Deployment for $CI_PROJECT_NAME Failed* ❌ \\n\\n*Please check the error* \\n\\n[Open Pipeline]($CI_PIPELINE_URL)"
-
 notify_error_job:
   extends: .notify
   script:
@@ -36,5 +36,5 @@ notify_error_job:
 notify_success_job:
   extends: .notify
   script:
-    - $MESSAGE=$MESSAGE_SUCCESS
+    - MESSAGE=$MESSAGE_SUCCESS
   when: on_success
