--- a/.gitlab-ci/.notify.yml
+++ b/.gitlab-ci/.notify.yml
@@ -1,5 +1,4 @@
 variables:
-  MESSAGE: ""
   MESSAGE_SUCCESS: "*Deployment for $CI_PROJECT_NAME Successfull* 👌 \\n\\n*New App Version* _ $APP_VERSION _ \\n\\n[Open Website](http://127.0.0.1:3050/)"
   MESSAGE_FAILURE: "*Deployment for $CI_PROJECT_NAME Failed* ❌ \\n\\n*Please check the error* \\n\\n[Open Pipeline]($CI_PIPELINE_URL)"
 
@@ -10,14 +9,6 @@ variables:
     - job: deploy_job
   before_script:
     - echo "Notification sending..."
-  after_script:
-    - |
-      printf '{"chat_id": "%s", "text": "%s", "parse_mode": "Markdown"}' \
-        "$TELEGRAM_CHAT_ID" "$MESSAGE" |
-      curl -s -X POST \
-        -H "Content-Type: application/json" \
-        -d @- \
-        "https://api.telegram.org/bot$TELEGRAM_BOT_TOKEN/sendMessage"
   only:
     - master
 
@@ -36,5 +27,11 @@ notify_error_job:
 notify_success_job:
   extends: .notify
   script:
-    - MESSAGE=$MESSAGE_SUCCESS
+    - |
+      printf '{"chat_id": "%s", "text": "%s", "parse_mode": "Markdown"}' \
+        "$TELEGRAM_CHAT_ID" "$MESSAGE_SUCCESS" |
+      curl -s -X POST \
+        -H "Content-Type: application/json" \
+        -d @- \
+        "https://api.telegram.org/bot$TELEGRAM_BOT_TOKEN/sendMessage"
   when: on_success
