--- a/.gitlab-ci/.deploy.yml
+++ b/.gitlab-ci/.deploy.yml
@@ -4,16 +4,8 @@ deploy_job:
   needs:
     - job: build_job
   script:
-    - echo "Stopping all containers..."
-    - docker compose down --remove-orphans
-    - echo "Deleting all old images for application..."
-    - >
-      images=$(docker images --filter=reference="$CI_REGISTRY_IMAGE/*" --format "{{.ID}}") &&
-      if [ -n "$images" ]; then
-          docker rmi -f $images;
-      else
-          echo "There are no images to delete";
-      fi
+    - chmod +x cleaning.sh
+    - ./ cleaning.sh
     - docker images
     - echo "Pulling latest images for application..."
     - docker compose pull
