--- a/.gitlab-ci/.deploy.yml
+++ b/.gitlab-ci/.deploy.yml
@@ -4,8 +4,8 @@ deploy_job:
   needs:
     - job: build_job
   script:
-    - chmod +x cleaning.sh
-    - ./cleaning.sh
+    - chmod ugo+x cleaning.sh
+    - bash cleaning.sh
     - docker images
     - echo "Pulling latest images for application..."
     - docker compose pull
