--- a/.gitlab-ci/.deploy.yml
+++ b/.gitlab-ci/.deploy.yml
@@ -4,14 +4,9 @@ deploy_job:
   needs:
     - job: build_job
   script:
-    - chmod ugo+x cleaning.sh
-    - sh ./.gitlab-ci/cleaning.sh
+    - sh cleaning.sh
     - docker images
-    - echo "Pulling latest images for application..."
-    - docker compose pull
-    - echo "Container startup..."
-    - docker compose up -d --force-recreate
-    - echo "Application successfully deployed!"
+    - sh deploy.sh
   only:
     - master
   environment: production
