--- a/.gitlab-ci/.lint.yml
+++ b/.gitlab-ci/.lint.yml
@@ -6,12 +6,12 @@ lint_job:
     - cd server
     - echo "Install packages for a folder 'server'..."
     - npm install
-    - sh /.gitlab-ci/lint.sh server
+    - sh ../lint.sh server
     - cd ..
     - cd client
     - echo "Install packages for a folder 'client'..."
     - npm install
-    - sh /.gitlab-ci/lint.sh client
+    - sh ../lint.sh client
     - cd ..
     - echo "All files have been verified!"
   artifacts:
