--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ variables:
 
 .docker-deploy:
   extends: .docker-login
+  script:
   after_script:
     - echo "Stopping all containers..."
     - docker compose down --remove-orphans
