--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ variables:
 .docker-deploy:
   extends: .docker-login
   script:
-    -
+    - echo "Deploy startup..."
   after_script:
     - echo "Stopping all containers..."
     - docker compose down --remove-orphans
