--- a/.gitlab-ci/.rollback.yml
+++ b/.gitlab-ci/.rollback.yml
@@ -6,5 +6,6 @@ rollback_job:
   script:
     - echo "Current application version - $APP_VERSION"
     - PREVIOUS_VERSION=$(echo ${APP_VERSION:1} | awk -F. '{print "v"$1"."($2-1)}')
+    - APP_VERSION=$PREVIOUS_VERSION
     - echo "Rollback the application to a previous version ($PREVIOUS_VERSION)..."
   when: manual
