--- a/.gitlab-ci/.deploy.yml
+++ b/.gitlab-ci/.deploy.yml
@@ -3,7 +3,7 @@ deploy_job:
   extends: .docker-deploy
   needs:
     - job: build_job
-  sxript:
+  script:
     - echo APP_VERSION="v0.$CI_PIPELINE_IID" > .env
   artifacts:
     reports:
