--- a/.gitlab-ci/.build.yml
+++ b/.gitlab-ci/.build.yml
@@ -4,6 +4,7 @@ build_job:
   needs:
     - job: lint_job
   script:
+    - echo APP_VERSION="v0.$CI_PIPELINE_IID" > .env
     - echo "Building docker images..."
     - echo "Building image $CI_REGISTRY_IMAGE/server:$APP_VERSION"
     - docker build -t $CI_REGISTRY_IMAGE/server:$APP_VERSION  ./server
