--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,9 @@ include:
   - local: ".gitlab-ci/.notify.yml"
   - local: ".gitlab-ci/.rollback.yml"
 
+variables:
+  APP_VERSION: "v0.$CI_PIPELINE_IID"
+
 .docker-login:
   before_script:
     - echo "Login to Gitlab Registry..."
