--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ variables:
     - echo "Pulling latest images for application..."
     - docker compose pull
     - echo "Container startup..."
-    - docker compose up -d --force-recreate
+    - VERSION=$APP_VERSION docker compose up -d --force-recreate
     - echo "Application successfully deployed!"
   only:
     - master
