--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,8 @@ variables:
     - echo "Pulling latest images for application..."
     - docker compose pull
     - echo "Container startup..."
-    - export VERSION=$APP_VERSION docker compose up -d --force-recreate
+    - export VERSION=$APP_VERSION
+    - docker compose up -d --force-recreate
     - echo "Application successfully deployed!"
   only:
     - master
