--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ variables:
 
 .docker-deploy:
   extends: .docker-login
+  variables:
+    - BUILD_VERSION: $APP_VERSION
   script:
     - echo "Deploy startup..."
   after_script:
@@ -30,7 +32,7 @@ variables:
       fi
     - docker images
     - echo "Pulling latest images for application..."
-    - export VERSION=$APP_VERSION
+    - export VERSION=$BUILD_VERSION
     - docker compose pull
     - echo "Container startup..."
     - docker compose up -d --force-recreate
