--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ variables:
 .docker-deploy:
   extends: .docker-login
   variables:
-    - BUILD_VERSION: $APP_VERSION
+    BUILD_VERSION: $APP_VERSION
   script:
     - echo "Deploy startup..."
   after_script:
