--- a/.gitlab-ci/.rollback.yml
+++ b/.gitlab-ci/.rollback.yml
@@ -1,12 +1,11 @@
 rollback_job:
   stage: rollback
   extends: .docker-deploy
-  variables:
-    BUILD_VERSION: $PREVIOUS_VERSION
   needs:
     - job: deploy_job
   script:
     - echo "Current application version - $APP_VERSION"
     - PREVIOUS_VERSION=$(echo ${APP_VERSION:1} | awk -F. '{print "v"$1"."($2-1)}')
     - echo "Rollback the application to a previous version ($PREVIOUS_VERSION)..."
+    - BUILD_VERSION=$PREVIOUS_VERSION
   when: manual
