--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,10 +15,12 @@ variables:
 
 .docker-deploy:
   extends: .docker-login
+  variables:
+    BUILD_VERSION: $APP_VERSION
   script:
     - echo "Deploy startup..."
   after_script:
-    - export VERSION=$APP_VERSION
+    - export VERSION=BUILD_VERSION
     - echo "Stopping all containers..."
     - docker compose down --remove-orphans
     - echo "Deleting all old images for application..."
