--- a/.gitlab-ci/.rollback.yml
+++ b/.gitlab-ci/.rollback.yml
@@ -1,11 +1,12 @@
 rollback_job:
   stage: rollback
   extends: .docker-deploy
+  variables:
+    BUILD_VERSION: $(echo ${APP_VERSION:1} | awk -F. '{print "v"$1"."($2-1)}')
   needs:
     - job: deploy_job
   script:
     - echo "Current application version - $APP_VERSION"
-    - PREVIOUS_VERSION=$(echo ${APP_VERSION:1} | awk -F. '{print "v"$1"."($2-1)}')
+    - PREVIOUS_VERSION=$BUILD_VERSION
     - echo "Rollback the application to a previous version ($PREVIOUS_VERSION)..."
-    - APP_VERSION=$PREVIOUS_VERSION
   when: manual
